appId: com.deploynk.flashcards
---
- tapOn:
    id: deck-detail-add-flashcard-button
- assertVisible:
    id: flashcard-form-screen
- tapOn:
    id: flashcard-form-multiple-choice-toggle
- tapOn:
    id: flashcard-form-question-input
- inputText: 'E2E Multiple Choice Flashcard Question'
- pressKey: Enter
- pressKey: Enter
- inputRandomText:
    length: 500
- scroll
- tapOn:
    id: flashcard-form-option-input-0
- inputText: 'Option A'
- tapOn:
    id: flashcard-form-option-input-1
- inputText: 'Option B'
- tapOn:
    id: flashcard-form-keyboard-done-button
- tapOn:
    id: flashcard-form-option-correct-1
- tapOn:
    id: flashcard-form-save-button
- assertVisible:
    id: deck-detail-screen

- tapOn:
    text: '.*E2E Multiple Choice Flashcard Question.*'
- assertVisible:
    id: flashcard-form-screen
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          point: 5%,15%
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          point: 5%,17%
- inputText: '## Title '
- tapOn:
    id: flashcard-form-keyboard-done-button
- tapOn:
    id: flashcard-form-save-button
- assertVisible:
    id: deck-detail-screen
- assertVisible: '.*Title E2E Multiple Choice Flashcard Question.*'
- tapOn:
    id: deck-detail-flashcard-[0-9]+$
- assertVisible:
    id: flashcard-form-screen
- assertNotVisible:
    id: flashcard-form-save-button
- tapOn:
    id: flashcard-form-delete-button
- extendedWaitUntil:
    visible:
      id: app-alert-content
    timeout: 10000
- tapOn:
    id: app-alert-button-destructive-[0-9]+$
- assertVisible:
    id: deck-detail-screen
